<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_signIn"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_background"
            tools:context=".authentication.ui.views.LoginFragment">

            <TextView
                android:id="@+id/button_signup"
                style="@style/ButtonAppBarStyle"
                android:minHeight="48dp"
                android:text="@string/sign_up"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                style="@style/TitleStyle"
                android:id="@+id/textView"
                android:text="@string/access_your_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_cards"
                android:layout_width="@dimen/img_cards_width"
                android:layout_height="@dimen/img_cards_height"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:srcCompat="@drawable/cards" />


            <EditText
                android:id="@+id/login_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <EditText
                android:id="@+id/login_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signIn"
        style="@style/ButtonAuthStyle"
        android:enabled="false"
        android:text="@string/sign_in" />
</RelativeLayout>