<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_next"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".authentication.ui.views.RegisterFragment">

            <ImageView
                android:id="@+id/img_cards"
                android:layout_width="@dimen/img_cards_width"
                android:layout_height="@dimen/img_cards_height"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:srcCompat="@drawable/cards" />

            <TextView
                style="@style/ButtonAppBarStyle"
                android:id="@+id/txt_sign_in"
                android:text="@string/txt_sign_in"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="334dp"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                style="@style/TitleStyle"
                android:id="@+id/txt_title"
                android:text="@string/txt_title_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/edt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_register_email"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_register_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_mail"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/edt_pass_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_register_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/ButtonAuthStyle"
        android:enabled="false"
        android:text="@string/btn_register_sign_up_main" />

</RelativeLayout>