<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="@dimen/font_20" />

    <TextView
        android:id="@+id/success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/large_100"
        android:layout_marginTop="@dimen/small_100"
        android:layout_marginBottom="@dimen/normal_100"
        android:textSize="@dimen/font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_divider_height"
        android:layout_marginTop="@dimen/small_50"
        android:background="@color/grey" />

    <Button
        android:id="@+id/success_btn_done"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_divider_height"
        android:layout_marginTop="@dimen/small_50"
        android:background="@color/grey" />

    <Button
        android:id="@+id/success_btn_add_another"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_another"
        android:textColor="@color/blue" />

</LinearLayout>