<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_sign_up"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_background"
            tools:context=".authentication.ui.views.RegisterDataIndustryFragment">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_ellipse_8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.20"
                app:srcCompat="@drawable/img_ellipse_9" />

            <TextView
                android:id="@+id/sign_up_title"
                style="@style/TitleStyle"
                android:text="@string/txt_title_sing_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_500"
                android:layout_marginBottom="@dimen/normal_500"
                android:text="@string/txt_register_step_2"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_initial_balance" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_150"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginEnd="@dimen/large_150"
                android:hint="@string/register_hint_role"
                android:textColorHint="@color/gray"
                app:boxBackgroundColor="@color/menu_roles"
                app:boxStrokeColor="@color/menu_roles"
                app:hintTextColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.30">

                <AutoCompleteTextView
                    android:id="@+id/industry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingTop="@dimen/small_50"
                    android:paddingBottom="@dimen/small_50"
                    android:popupBackground="@color/menu_roles"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reg_txt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_100"
                android:text="@string/txt_initial_balance"
                android:textSize="@dimen/font_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu" />

            <EditText
                android:id="@+id/edt_initial_balance"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/small_100"
                android:ems="@integer/default_ems"
                android:hint="@string/txt_initial_balance2"
                android:inputType="number|numberDecimal"
                android:maxLength="@integer/max_balance_length"
                android:maxLines="@integer/max_lines"
                android:textSize="@dimen/font_27"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/reg_txt_balance"
                app:layout_constraintTop_toBottomOf="@+id/reg_txt_balance" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/ButtonAuthStyle"
        android:enabled="false"
        android:text="@string/btn_register_sign_up" />
</RelativeLayout>