<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dash_rec_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tabLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/dash_progress_bar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_100"
        android:indeterminateTint="@color/purple"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <LinearLayout
        android:id="@+id/dash_no_transaction_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <TextView
            android:id="@+id/dash_no_transaction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_210"
            android:layout_marginTop="@dimen/small_450"
            android:layout_marginEnd="@dimen/large_210"
            android:gravity="center"
            android:text="@string/no_expense_transaction"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constrainedWidth="true" />

        <Button
            android:id="@+id/dash_add_new_transaction_button"
            style="@style/customButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_450"
            android:layout_marginTop="@dimen/small_250"
            android:layout_marginEnd="@dimen/small_450"
            android:text="@string/add_new_transaction" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>